<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">pRoMiSe Queue</string>
    <string name="title_activity_setting">Setting</string>
    <string name="action_settings">Settings</string>
    <string name="shop_id">Shop ID</string>
    <string name="ip_address">IP Address</string>
    <string name="web_service">Web Service</string>
    <string name="vdo_dir">Video Dir</string>
    <string name="enabled_queue">Enable Queue</string>
    <string name="enable_tw_queu">Enable take away queue</string>
    <string name="add">Add</string>
    <string name="information_text">Information text</string>
    <string name="port">Port</string>
    <string name="col_no">#</string>
    <string name="name">Name</string>
    <string name="wait">Wait</string>
    <string name="status">Status</string>
    <string name="pickup_queue">Pickup Queue</string>
    <string name="table_queue">Table Queue</string>
    <string name="url">Url</string>
    <string name="connection">Connection</string>
    <string name="resource">Resource</string>
    <string name="queue_speak_dir">Queue Speak Dir</string>
    <string name="refresh">Refresh</string>
    <string name="backoffice_url">Backoffice url</string>
    <string name="refresh_interval">refresh interval</string>
    <string name="video_directory">video directory</string>
    <string name="queue_feature">Queue feature</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="title_activity_manage_logo">ManageLogoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="load_photo">Load Photo</string>
    <string name="manage_logo">Manage Logo</string>
    <string name="speak_time">Speak Times</string>
    <string name="d">D</string>
    <string name="general">General</string>
	<string name="queue_columns">Queue Columns</string>
	<string name="calling_queue_dir">Calling Queue Sound Dir</string>
	<string name="calling_times">Calling Times</string>
	<string name="software_info">© 2013 All Rights Reserved. Synature Technology Co., Ltd.\n 
	55/165 M.Banklangmuang, Soi Ladprao 88, Ladprao Rd.\n Wangthonglang, Bangkok, Thailand. 10310\n
	Tel: +66(0)-2-530-3835-6 Fax: +66(0)-2-530-3092\n E-mail: info@synaturegroup.com</string>
	<string name="device_code">Device Code :</string>
	<string name="title_activity_about">About</string>
	<string name="version">Version : </string>
</resources>
