<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="1dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            style="@style/ColumnHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/a"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCallA"
            style="@style/SubHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:ellipsize="marquee"
            android:gravity="center"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCallASub"
            style="@style/SubHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:gravity="center"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingBottom="4dp"
            android:paddingTop="0dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14sp" />

        <ListView
            android:id="@+id/lvQueueA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:divider="@null"
            android:dividerHeight="1dp" >
        </ListView>

        <TextView
            android:id="@+id/tvSumQA"
            style="@style/ColumnHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="48dp"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="1dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            style="@style/ColumnHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/b"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCallB"
            style="@style/SubHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:ellipsize="marquee"
            android:gravity="center"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCallBSub"
            style="@style/SubHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:gravity="center"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingBottom="4dp"
            android:paddingTop="0dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14sp" />

        <ListView
            android:id="@+id/lvQueueB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:divider="@null"
            android:dividerHeight="1dp" >
        </ListView>

        <TextView
            android:id="@+id/tvSumQB"
            style="@style/ColumnHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="48dp"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="1dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView4"
            style="@style/ColumnHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/c"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCallC"
            style="@style/SubHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:ellipsize="marquee"
            android:gravity="center"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCallCSub"
            style="@style/SubHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:gravity="center"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingBottom="4dp"
            android:paddingTop="0dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14sp" />

        <ListView
            android:id="@+id/lvQueueC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:divider="@null"
            android:dividerHeight="1dp" >
        </ListView>

        <TextView
            android:id="@+id/tvSumQC"
            style="@style/ColumnHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="48dp"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView03"
            style="@style/ColumnHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:text="@string/d"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCallD"
            style="@style/SubHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:ellipsize="marquee"
            android:gravity="center"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCallDSub"
            style="@style/SubHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:gravity="center"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingBottom="4dp"
            android:paddingTop="0dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14sp" />

        <ListView
            android:id="@+id/lvQueueD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:divider="@null"
            android:dividerHeight="1dp" >
        </ListView>

        <TextView
            android:id="@+id/tvSumQD"
            style="@style/ColumnHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="48dp"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>